--- a/Dockerfile.rag
+++ b/Dockerfile.rag
@@ -5,10 +5,8 @@ COPY rag/package*.json ./
 #COPY shared/package*.json ./
 
 # Install production dependencies
-#RUN npm ci --only=production --ignore-scripts && \
-    #npm cache clean --force
-
-RUN mpm install    
+RUN npm ci --only=production --ignore-scripts && \
+    npm cache clean --force
 
 # Copy shared code
 COPY shared ./shared
